--- a/BugTracker/Views/Home/Index.cshtml
+++ b/BugTracker/Views/Home/Index.cshtml
@@ -19,22 +19,14 @@
 <body>
     <div id="wrapper">
         <nav class="navbar-inverse" role="navigation">
-                <ul id="active" class="nav navbar-nav side-nav">
-                    <li><a href="index.html"><i class="fa fa-bullseye"></i> Dashboard</a></li>
-                    <li><a href="Views/Projects/Create.cshtml"><i class="fa fa-tasks"></i> Projects</a></li>
-                    <li><a href="portfolio.html"><i class="fa fa-tasks"></i> Portfolio</a></li>
-                    <li><a href="blog.html"><i class="fa fa-globe"></i> Blog</a></li>
-                    <li><a href="signup.html"><i class="fa fa-list-ol"></i> SignUp</a></li>
-                    <li><a href="register.html"><i class="fa fa-font"></i> Register</a></li>
-                    <li><a href="timeline.html"><i class="fa fa-font"></i> Timeline</a></li>
-                    <li><a href="forms.html"><i class="fa fa-list-ol"></i> Forms</a></li>
-                    <li><a href="typography.html"><i class="fa fa-font"></i> Typography</a></li>
-                    <li><a href="bootstrap-elements.html"><i class="fa fa-list-ul"></i> Bootstrap Elements</a></li>
-                    <li><a href="bootstrap-grid.html"><i class="fa fa-table"></i> Bootstrap Grid</a></li>
-                </ul>
+            <ul id="active" class="nav navbar-nav side-nav">
+                <li><a href="index.html"><i class="fa fa-bullseye"></i> Dashboard</a></li>
+                <li><a href="@Url.Action("","Projects")"><i class="fa fa-tasks"></i> Projects</a></li>
+                <li><a href="@Url.Action("","ApplicationUsers")"><i class="fa fa-tasks"></i> Change Role</a></li>
+                
+            </ul>
           </nav>
     </div>
-    
-               
+
 </body>
 </html>
