--- a/BugTracker/Views/Home/Index.cshtml
+++ b/BugTracker/Views/Home/Index.cshtml
@@ -23,7 +23,9 @@
                 <li><a href="index.html"><i class="fa fa-bullseye"></i> Dashboard</a></li>
                 <li><a href="@Url.Action("","Projects")"><i class="fa fa-tasks"></i> Projects</a></li>
                 <li><a href="@Url.Action("","ApplicationUsers")"><i class="fa fa-tasks"></i> Change Role</a></li>
-                
+                <li><a href="@Url.Action("Index", "Tickets", new { id="" })"><i class="fa fa-tasks"></i>All Tickets</a></li>
+                <li><a href="@Url.Action("UserTickets", "Tickets",new { id="User"})"><i class="fa fa-tasks"></i> User Tickets</a></li>
+
             </ul>
           </nav>
     </div>
