--- a/BugTracker/Views/Tickets/Index.cshtml
+++ b/BugTracker/Views/Tickets/Index.cshtml
@@ -23,23 +23,23 @@
 <table id="wer" class="table">
     <thead>
         <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Assignee.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Creator.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Project.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.TicketPriority.Name)
-            </th>
             @*<th>
-                    @Html.DisplayNameFor(model => model.TicketStatus.Name)
-                </th>*@
+                @Html.DisplayNameFor(model => model.Assignee)
+            </th>
             <th>
-                @Html.DisplayNameFor(model => model.TicketType.Name)
+                @Html.DisplayNameFor(model => model.Creator)
+            </th>*@
+            <th>
+                @Html.DisplayNameFor(model => model.Project)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.TicketPriority)
+            </th>
+            <th>
+                    @Html.DisplayNameFor(model => model.TicketStatus)
+                </th>
+            <th>
+                @Html.DisplayNameFor(model => model.TicketType)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Name)
@@ -60,12 +60,12 @@
         @foreach (var item in Model)
         {
             <tr>
-                <td>
+                @*<td>
                     @Html.DisplayFor(modelItem => item.Assignee.Name)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Creator.Name)
-                </td>
+                </td>*@
                 <td>
                     @Html.DisplayFor(modelItem => item.Project.Name)
                 </td>
@@ -73,8 +73,8 @@
                     @Html.DisplayFor(modelItem => item.TicketPriority.Name)
                 </td>
                 @*<td>
-                        @Html.DisplayFor(modelItem => item.TicketStatus.Name)
-                    </td>*@
+                    @Html.DisplayFor(modelItem => item.TicketStatus.Name)
+                </td>*@
                 <td>
                     @Html.DisplayFor(modelItem => item.TicketType.Name)
                 </td>
@@ -90,19 +90,23 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.Updated)
                 </td>
-                @if (User.Identity.IsAuthenticated && !string.IsNullOrWhiteSpace(ViewBag.User))
+                @if (User.IsInRole("Developer"))
                 {
-                    if (User.IsInRole("Developer"))
-                    {
-                        <td>
-                            @Html.ActionLink("Edit", "Edit", new { id = item.Id })
-                        </td>
-                    }
+                    <td>
+                        @Html.ActionLink("Edit", "Edit", new { id = item.Id })
+                    </td>
                 }
+
                 @if (User.IsInRole("Project Manager"))
                 {
-                    @Html.ActionLink("AssignDeveloper", "AssignDeveloper", new { ticketId = item.Id })
+                    <td>
+                        @Html.ActionLink("AssignDeveloper", "AssignDeveloper", new { ticketId = item.Id })
+                    </td>
+                    <td>
+                        @Html.ActionLink("Edit", "Edit", new { id = item.Id })
+                    </td>
                 }
+
             </tr>
         }
     </tbody>
