--- a/BugTracker/Views/Tickets/Details.cshtml
+++ b/BugTracker/Views/Tickets/Details.cshtml
@@ -11,8 +11,8 @@
     <hr />
     <dl class="dl-horizontal">
         @*<dt>
-            @Html.DisplayNameFor(model => model.Assignee.Name)
-        </dt>*@
+                @Html.DisplayNameFor(model => model.Assignee.Name)
+            </dt>*@
 
         <dd>
             @Html.DisplayFor(model => model.Assignee.Name)
@@ -91,6 +91,32 @@
         </dd>
 
     </dl>
+
+    <div>
+        @foreach (var comment in Model.Comments)
+        {
+            <hr />
+            @comment.User.Name
+            <p style="text-align: left; margin-left: 70px">
+                @comment.Comment
+                <span style="font-size: 10px; text-align: right">
+                    - @comment.Created.ToString("dd/mm/yyyy hh:mm")
+                </span>
+            </p>
+        }
+    </div>
+    <div>
+        @using (Html.BeginForm("CreateComment", "Tickets", new { id = Model.Id }, FormMethod.Post))
+        {
+            <input type="hidden" name="slug" value="@Model.Comments" />
+            <textarea name="Body"></textarea>
+            if (ViewBag.ErrorMessage != null)
+            {
+                <span>@ViewBag.ErrorMessage</span>
+            }
+            <input type="submit" value="submit" />
+        }
+    </div>
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
