--- a/BugTracker/Views/Tickets/Index.cshtml
+++ b/BugTracker/Views/Tickets/Index.cshtml
@@ -59,55 +59,67 @@
     <tbody>
         @foreach (var item in Model)
         {
-            <tr>
-                @*<td>
-                    @Html.DisplayFor(modelItem => item.Assignee.Name)
+        <tr>
+            @*<td>
+            @Html.DisplayFor(modelItem => item.Assignee.Name)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Creator.Name)
+        </td>*@
+            <td>
+                @Html.DisplayFor(modelItem => item.Project.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.TicketPriority.Name)
+            </td>
+            @*<td>
+            @Html.DisplayFor(modelItem => item.TicketStatus.Name)
+        </td>*@
+            <td>
+                @Html.DisplayFor(modelItem => item.TicketType.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Description)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Created)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Updated)
+            </td>
+            @if (User.IsInRole("Developer"))
+            {
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id = item.Id })
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Creator.Name)
-                </td>*@
-                <td>
-                    @Html.DisplayFor(modelItem => item.Project.Name)
+                    @Html.ActionLink("Details", "Details", new { id = item.Id })
                 </td>
+            }
+            @if (User.IsInRole("Admin"))
+            {
                 <td>
-                    @Html.DisplayFor(modelItem => item.TicketPriority.Name)
+                    @Html.ActionLink("Details", "Details", new { id = item.Id })
                 </td>
-                @*<td>
-                    @Html.DisplayFor(modelItem => item.TicketStatus.Name)
-                </td>*@
-                <td>
-                    @Html.DisplayFor(modelItem => item.TicketType.Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Description)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Created)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Updated)
-                </td>
-                @if (User.IsInRole("Developer"))
-                {
-                    <td>
-                        @Html.ActionLink("Edit", "Edit", new { id = item.Id })
-                    </td>
-                }
+            }
 
-                @if (User.IsInRole("Project Manager"))
-                {
-                    <td>
-                        @Html.ActionLink("AssignDeveloper", "AssignDeveloper", new { ticketId = item.Id })
-                    </td>
-                    <td>
-                        @Html.ActionLink("Edit", "Edit", new { id = item.Id })
-                    </td>
-                }
+            @if (User.IsInRole("Project Manager"))
+            {
+                <td>
+                    @Html.ActionLink("AssignDeveloper", "AssignDeveloper", new { ticketId = item.Id })
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id = item.Id })
+                </td>
+                <td>
+                    @Html.ActionLink("Details", "Details", new { id = item.Id })
+                </td>
+            }
 
-            </tr>
+        </tr>
         }
     </tbody>
 
