--- a/BugTracker/Views/Home/Index.cshtml
+++ b/BugTracker/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
     <script type="text/javascript" src="http://www.shieldui.com/shared/components/latest/js/shieldui-all.min.js"></script>
     <script type="text/javascript" src="http://www.prepbootstrap.com/Content/js/gridData.js"></script>
 </head>
-<body>
+@*<body>
     <div id="wrapper">
         <nav class="navbar-inverse" role="navigation">
             <ul id="active" class="nav navbar-nav side-nav">
@@ -30,5 +30,5 @@
           </nav>
     </div>
 
-</body>
+</body>*@
 </html>
