--- a/BugTracker/Views/Shared/_Layout.cshtml
+++ b/BugTracker/Views/Shared/_Layout.cshtml
@@ -18,8 +18,8 @@
 </head>
 
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
+    <div id="wrapper">
+        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="icon-bar"></span>
@@ -28,26 +28,56 @@
                 </button>
                 @Html.ActionLink("BugTracker App", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("BugTracker Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                </ul>
+               <li class="nav navbar-right top-nav" style="padding-right: 35px;">
                 @Html.Partial("_LoginPartial")
+                </li>
+                <div class="collapse navbar-collapse navbar-ex1-collapse">
+                    <ul class="nav navbar-nav side-nav">
+                        <li>@Html.ActionLink("BugTracker Home", "Index", "Home")</li>
+                        <li><a href="@Url.Action("","Projects")"><i class="fa fa-tasks"></i> Projects</a></li>
+                        <li><a href="@Url.Action("","ApplicationUsers")"><i class="fa fa-tasks"></i> Change Role</a></li>
+                        <li>
+                            <a href="javascript:;" data-toggle="collapse" data-target="#demo"><i class="fa fa-fw fa-arrows-v"></i> Profiles <i class="fa fa-fw fa-caret-down"></i></a>
+                            <ul id="demo" class="collapse">
+                                <li>
+                                    <a href="@Url.Action("SwitchUsers","Account", new { switchedUser = "IamtheAdmin"})">Admin</a>
+                                </li>
+                                <li>
+                                    <a href="@Url.Action("SwitchUsers","Account", new { switchedUser = "John"})">Project Manager</a>
+                                </li>
+                                <li>
+                                    <a href="@Url.Action("SwitchUsers","Account", new { switchedUser = "Smith"})">Developer</a>
+                                </li>
+                                <li>
+                                    <a href="@Url.Action("SwitchUsers","Account", new { switchedUser = "Sam"})">Submitter</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li><a href="@Url.Action("Index", "Tickets", new { id="" })"><i class="fa fa-tasks"></i>All Tickets</a></li>
+                        <li><a href="@Url.Action("UserTickets", "Tickets",new { id="User"})"><i class="fa fa-tasks"></i> User Tickets</a></li>
+                    </ul>
 
+                </div>
+
+        </nav>
+        <div id="page-wrapper">
+            <div class="container-fluid">
+                <!-- Page Heading -->
+                <div class="row">
+                    <div class="col-lg-12">
+                        <h1 class="page-header">
+                            Dashboard
+                        </h1>
+                    </div>
+                </div>
+                @RenderBody()
             </div>
         </div>
     </div>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer></footer>
-    </div>
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-    @RenderSection("Scripts", required: false)
+        @Scripts.Render("~/bundles/jquery")
+        @Scripts.Render("~/bundles/bootstrap")
+        @RenderSection("Scripts", required: false)
 
 </body>
 </html>
