--- a/BugTracker/Views/Tickets/AssignDeveloper.cshtml
+++ b/BugTracker/Views/Tickets/AssignDeveloper.cshtml
@@ -20,7 +20,7 @@
                         @Html.HiddenFor(p => p.TicketId)
                         @Html.DropDownListFor(p => p.SelectedDeveloperId, Model.DeveloperList, htmlAttributes: new { @class = "form-control" })
                         @Html.ValidationMessageFor(model => model.DeveloperList, "", new { @class = "text-danger" })
-                        <input type="submit" value="Submit!" class="btn btn-success" />
+                        <input type="submit" value="Submit!" />
                     </div>
                 }
             </section>
