--- a/BugTracker/Views/Tickets/Details.cshtml
+++ b/BugTracker/Views/Tickets/Details.cshtml
@@ -3,6 +3,13 @@
 @{
     ViewBag.Title = "Details";
 }
+@section Scripts {
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('#Table').DataTable();
+        });
+    </script>
+}
 
 <h2>Details</h2>
 
@@ -19,8 +26,8 @@
         </dd>
 
         @*<dt>
-            @Html.DisplayNameFor(model => model.Creator.Name)
-        </dt>*@
+                @Html.DisplayNameFor(model => model.Creator.Name)
+            </dt>*@
 
         <dd>
             @Html.DisplayFor(model => model.Creator.Name)
@@ -83,8 +90,8 @@
         </dd>
 
         @*<dt>
-            @Html.DisplayNameFor(model => model.Updated)
-        </dt>*@
+                @Html.DisplayNameFor(model => model.Updated)
+            </dt>*@
 
         <dd>
             @Html.DisplayFor(model => model.Updated)
@@ -132,7 +139,7 @@
         }
     </div>
     <div>
-        @using (Html.BeginForm("CreateAttachment", "Tickets", new { ticketid = Model.Id }, FormMethod.Post, new { enctype = "Multipart/form-data" }))
+        @using (Html.BeginForm("CreateAttachment", "Tickets", new { Id = Model.Id }, FormMethod.Post, new { enctype = "Multipart/form-data" }))
         {
             @Html.AntiForgeryToken()
             <input name="image" type="file" class="form-control" id="fileUpload" />
@@ -142,6 +149,36 @@
             }
             <input type="submit" value="submit" />
         }
+    </div>
+
+    <div>
+        <div class="col-md-6">
+            <h2>Ticket Histories</h2>
+            <table id="Table">
+                <thead>
+                    <tr>
+                        <th>Property Type</th>
+                        <th>Date Modified</th>
+                        <th>New Value</th>
+                        <th>Old Value</th>
+                        <th>User Name</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var history in Model.Histories)
+                    {
+                        <tr>
+                            <td>@history.Property</td>
+                            <td>@history.Changed</td>
+                            <td>@history.NewValue</td>
+                            <td>@history.OldValue</td>
+                            <td>@history.User.Name</td>
+                        </tr>
+
+                    }
+                </tbody>
+            </table>
+        </div>
     </div>
 </div>
 <p>
