--- a/BugTracker/Views/Tickets/Index.cshtml
+++ b/BugTracker/Views/Tickets/Index.cshtml
@@ -23,23 +23,23 @@
 <table id="wer" class="table">
     <thead>
         <tr>
-            @*<th>
-                @Html.DisplayNameFor(model => model.Assignee)
+            <th>
+                Developer
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Creator)
-            </th>*@
-            @*<th>
-                @Html.DisplayNameFor(model => model.Project)
-            </th>*@
-            <th>
-                @Html.DisplayNameFor(model => model.TicketPriority)
+                Creator
             </th>
             <th>
-                    @Html.DisplayNameFor(model => model.TicketStatus)
-                </th>
+                Project Name
+            </th>
             <th>
-                @Html.DisplayNameFor(model => model.TicketType)
+               TicketPriority
+            </th>
+            <th>
+              TicketStatus
+            </th>
+            <th>
+              TicketType
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Name)
@@ -60,21 +60,21 @@
         @foreach (var item in Model)
         {
         <tr>
-            @*<td>
+            <td>
             @Html.DisplayFor(modelItem => item.Assignee.Name)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Creator.Name)
-        </td>*@
+        </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Project.Name)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.TicketPriority.Name)
             </td>
-            @*<td>
+            <td>
             @Html.DisplayFor(modelItem => item.TicketStatus.Name)
-        </td>*@
+             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.TicketType.Name)
             </td>
@@ -109,7 +109,7 @@
             @if (User.IsInRole("Project Manager"))
             {
                 <td>
-                    @Html.ActionLink("AssignDeveloper", "AssignDeveloper", new { ticketId = item.Id })
+                    @Html.ActionLink("AssignDeveloper", "AssignDeveloper", new { Id = item.Id })
                 </td>
                 <td>
                     @Html.ActionLink("Edit", "Edit", new { id = item.Id })
